updated special and scheduled maintenances, update swagger, route etc.
