# server/docs/swagger.yaml
@@ -1094,7 +1094,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ServerError'
 
-  # SCHEDULEDMAINTENANCES
+  # SCHEDULED_MAINTENANCES
   /scheduledMaintenances:
     get:
       summary: Returns all scheduledMaintenances
@@ -1210,16 +1210,14 @@ paths:
                   lastMaintenance: null
                   periodId: 1
                   categoryId: 1
-              Norma and Period:   
+              Example6:   
                 value:
-                  normaInMinutes: 5
+                  name: New name
+                  normaInMinutes: 50
+                  lastMaintenance: null
                   periodId: 1
-              Only norma:   
-                value:
-                  normaInMinutes: 5
-              Only period:   
-                value:
-                  periodId: 1
+                  categoryId: 1
+                  priorityId: 1
       responses:
         200:
           description: The maintenance was successfully updated and the data of the updated maintenance is returned
@@ -1274,11 +1272,6 @@ paths:
                 value:
                   name: New name
                   normaInMinutes: 50
-                  categoryId: 1
-              Example2:   
-                value:
-                  name: New name
-                  normaInMinutes: 50
                   lastMaintenance: null
                   periodId: 1
                   categoryId: 1
@@ -1297,6 +1290,213 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ServerError'
+
+  # SPECIAL_MAINTENANCES
+  /specialMaintenances:
+    get:
+      summary: Returns all specialMaintenances
+      tags: [SpecialMaintenances]
+      responses:
+        200:
+          description: the list of the specialMaintenances
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialMaintenance'
+  
+  /specialMaintenances/details:
+    get:
+      summary: Returns all specialMaintenances with details
+      tags: [SpecialMaintenances]
+      responses:
+        200:
+          description: the list of the specialMaintenances
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialMaintenance'
+        
+  /specialMaintenances/{id}:
+    get:
+      summary: Returns a maintenance by id
+      tags: [SpecialMaintenances]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        200:
+          description: Details of a maintenance
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SpecialMaintenance'
+    delete:
+      summary: Delete a maintenance by id
+      tags: [SpecialMaintenances]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        200:
+          description: The maintenance was successfully deleted and the data of the deleted maintenance is returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialMaintenance'
+        404:
+          description: The maintetnance was not found with this id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        500:
+          description: The maintenance could not be deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
+    patch:
+      summary: Update a maintenance by id
+      tags: [SpecialMaintenances]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      requestBody:
+        content:
+          application/json:     
+            schema:             
+              $ref: '#/components/schemas/SpecialMaintenance'
+            examples:    
+              Example1:   
+                value:
+                  name: New name
+              Example2:   
+                value:
+                  name: New name
+                  description: null
+              Example3:   
+                value:
+                  name: New name
+                  description: null
+                  normaInMinutes: 50
+              Example4:   
+                value:
+                  name: New name
+                  description: null
+                  normaInMinutes: 50
+                  malfunctionDate: '2021-02-24T18:17:29.558Z'
+              Example5:   
+                value:
+                  name: New name
+                  description: null
+                  normaInMinutes: 50
+                  malfunctionDate: '2021-02-24T18:17:29.558Z'
+                  deviceId: 1
+              Example6:   
+                value:
+                  name: New name
+                  description: null
+                  normaInMinutes: 50
+                  malfunctionDate: '2021-02-24T18:17:29.558Z'
+                  deviceId: 1
+                  priorityId: 1
+      responses:
+        200:
+          description: The maintenance was successfully updated and the data of the updated maintenance is returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialMaintenance'
+        404:
+          description: The maintenance was not found with this id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        500:
+          description: The maintenance could not be updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
+
+  /specialMaintenances/{id}/details:
+    get:
+      summary: Returns a maintenance by id
+      tags: [SpecialMaintenances]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        200:
+          description: Details of a maintenance
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SpecialMaintenance'
+
+  /specialMaintenance:
+    post:
+      summary: Adds a new maintenance
+      tags: [SpecialMaintenances]
+      requestBody:
+        content:
+          application/json:     
+            schema:             
+              $ref: '#/components/schemas/SpecialMaintenance'   
+            examples:    
+              Example1:   
+                value:
+                  name: New name
+                  description: null
+                  normaInMinutes: 50
+                  deviceId: 1
+                  priorityId: 1
+              Example2:   
+                value:
+                  name: New name
+                  description: New description
+                  normaInMinutes: 50
+                  malfunctionDate: '2021-02-24T18:17:29.558Z'
+                  deviceId: 1
+                  priorityId: 1
+      responses:
+        200:
+          description: The maintenance was successfully created and the data of the created maintenance is returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialMaintenance'
+        500:
+          description: The maintenance could not be created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
+
+
 # INSTRUCTIONS
   /instructions:
     get:
